--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,16 +9,17 @@
 
         <env name="FIXTURE_SCHEMA_METADATA" value="tests/schema.php"/>
     </php>
-    <!-- Add any additional test suites you want to run here -->
+
     <testsuites>
         <testsuite name="state-machine">
             <directory>tests/TestCase/</directory>
         </testsuite>
     </testsuites>
-    <!-- Setup a listener for fixtures -->
+
     <extensions>
-        <extension class="\Cake\TestSuite\Fixture\PHPUnitExtension"/>
+        <bootstrap class="Cake\TestSuite\Fixture\Extension\PHPUnitExtension"/>
     </extensions>
+
     <coverage>
         <include>
             <directory suffix=".php">src/</directory>
