--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "spryker/cakephp-statemachine",
     "description": "CakePHP StateMachine Plugin",
-    "type": "cakephp-plugin",
     "license": "proprietary",
+    "type": "cakephp-plugin",
     "authors": [
         {
             "name": "Spryker Systems GmbH",
@@ -16,13 +16,13 @@
         "phpdocumentor/graphviz": "^2.0.0"
     },
     "require-dev": {
-        "dereuromark/cakephp-ide-helper": "^2.0.0",
-        "dereuromark/cakephp-tools": "^3.0.0",
         "cakephp/bake": "^3.0.4",
         "cakephp/migrations": "^4.1.1",
+        "dereuromark/cakephp-ide-helper": "^2.0.0",
+        "dereuromark/cakephp-tools": "^3.0.0",
+        "phpstan/phpstan": "^1.0.0",
         "phpunit/phpunit": "^10.3",
-        "spryker/code-sniffer": "@stable",
-        "phpstan/phpstan": "^1.0.0"
+        "spryker/code-sniffer": "@stable"
     },
     "autoload": {
         "psr-4": {
@@ -32,24 +32,24 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "StateMachine\\Test\\": "tests/",
             "Cake\\Test\\": "vendor/cakephp/cakephp/tests/",
+            "StateMachine\\Test\\": "tests/",
             "TestApp\\": "tests/test_app/src/"
         }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --log-junit tmp/coverage/unitreport.xml --coverage-html tmp/coverage --coverage-clover tmp/coverage/coverage.xml",
-        "lowest": "validate-prefer-lowest",
-        "lowest-setup": "composer update --prefer-lowest --prefer-stable --prefer-dist --no-interaction && cp composer.json composer.backup && composer require --dev dereuromark/composer-prefer-lowest && mv composer.backup composer.json",
-        "stan": "vendor/bin/phpstan analyse",
-        "stan-tests": "vendor/bin/phpstan analyse -c tests/phpstan.neon",
-        "cs-check": "vendor/bin/phpcs",
-        "cs-fix": "vendor/bin/phpcbf"
     },
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "scripts": {
+        "cs-check": "vendor/bin/phpcs",
+        "cs-fix": "vendor/bin/phpcbf",
+        "lowest": "validate-prefer-lowest",
+        "lowest-setup": "composer update --prefer-lowest --prefer-stable --prefer-dist --no-interaction && cp composer.json composer.backup && composer require --dev dereuromark/composer-prefer-lowest && mv composer.backup composer.json",
+        "stan": "vendor/bin/phpstan analyse",
+        "stan-tests": "vendor/bin/phpstan analyse -c tests/phpstan.neon",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --log-junit tmp/coverage/unitreport.xml --coverage-html tmp/coverage --coverage-clover tmp/coverage/coverage.xml"
     }
 }
