Update to php-collective/dto with abstract method pattern
- Switch to dev-master for cakephp-dto and php-collective/dto
- Convert dto.xml to dto.yml format
- Regenerate DTOs with new abstract method pattern (_toArrayInternal, _createFromArrayInternal)
- DTOs now extend PhpCollective\Dto\Dto\AbstractDto

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "description": "CakePHP StateMachine Plugin",
     "license": "proprietary",
     "type": "cakephp-plugin",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Spryker Systems GmbH",
@@ -12,7 +14,8 @@
     "require": {
         "php": ">=8.3",
         "cakephp/cakephp": "^5.1.0",
-        "dereuromark/cakephp-dto": "^2.0.0",
+        "dereuromark/cakephp-dto": "dev-master",
+        "php-collective/dto": "dev-master",
         "phpdocumentor/graphviz": "^2.0.0"
     },
     "require-dev": {
