Use stable versions: cakephp-dto ^2.5.0, php-collective/dto ^0.1.2

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,6 @@
     "description": "CakePHP StateMachine Plugin",
     "license": "proprietary",
     "type": "cakephp-plugin",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "authors": [
         {
             "name": "Spryker Systems GmbH",
@@ -14,8 +12,8 @@
     "require": {
         "php": ">=8.3",
         "cakephp/cakephp": "^5.1.0",
-        "dereuromark/cakephp-dto": "dev-master",
-        "php-collective/dto": "dev-master",
+        "dereuromark/cakephp-dto": "^2.5.0",
+        "php-collective/dto": "^0.1.2",
         "phpdocumentor/graphviz": "^2.0.0"
     },
     "require-dev": {
